src/objects/AB2__PriceBookEntry__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This contains the mapping of AB Rate Card with SF PriceBook. Typically populated by the [Map Products to Price Books] button on the AdBook Administration page.</description>
    <fields>
        <fullName>AB2__RateCardId__c</fullName>
        <label>RateCardId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__SFPriceBookID__c</fullName>
        <label>SFPriceBookID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__SortOrder__c</fullName>
        <description>Sort Order. Lowest numbers appear first.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PriceBookEntry</label>
</CustomObject>